--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -1,47 +1,72 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
+<html ng-app="GI-app">
 
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
+<head>
+  <meta charset="utf-8" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="msapplication-tap-highlight" content="no" />
+  <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+  <title>GItest</title>
+    <script type="text/javascript" src="js/ng-cordova.min.js"></script>
+  <script type="text/javascript" src="cordova.js"></script>
+  <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript">
+    init.initialize();
+  </script>
+</head>
 
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html ng-app="gitest">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="msapplication-tap-highlight" content="no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>GItest</title>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/angular.min.js"></script>
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </head>
-    <body>
-        <div class="app" ng-controller="appCtrl">
-            <div id="state" class="online"></div>
-            <div id="line">
+<body ng-controller="appCtrl">
+  <div class="app">
+    <div id="state" class="online"></div>
+    <div id="search" ng-show="search">
+      <div id="searchbox" class="input-group" style="width:97%; margin:auto;">
+        <input type="text" id="search" class="form-control" placeholder="Search for..." ng-model="searchText">
+        <span class="input-group-btn">
+          <button id="searchBtn" class="btn btn-default" type="button" ng-click="searchUsers()">Go!</button>
+        </span>
+      </div>
+      <div class="list-group" style="width:97%; margin:auto;">
+        <a href ng-click="getMyCtrlScope().search=false; getMyCtrlScope().currentResult=result;" class="list-group-item" ng-repeat="result in results">
+          <h4>{{result.id}}</h4>
+          <h6>{{result.name}}</h6>
+          <h6>{{result.salary}}</h6>
+        </a>
+      </div>
+    </div>
+    <div id="search" ng-show="!search">
+      <div class="container">
+        <div class="row">
+          <form>
+            <div class="well well-sm">
+              <strong>User ID : {{currentResult.id}}</strong>
             </div>
+            <div class="col-lg-6">
+              <div class="form-group">
+                <label for="InputName">Name</label>
+                <div class="input-group">
+                  <input type="text" class="form-control" name="name" id="InputName" ng-model="currentResult.name">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="InputSalary">Salary</label>
+                <div class="input-group">
+                  <input type="text" class="form-control" id="InputSalary" name="salary" ng-model="currentResult.salary">
+                </div>
+              </div>
+              <button type="button" class="btn btn-info pull-left" ng-click="getMyCtrlScope().search=true">Home</button>
+              <input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info pull-right" ng-click="submitUser()">
+            </div>
+          </form>
         </div>
-    </body>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
