--- a/www/index.html
+++ b/www/index.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" type="text/css" href="css/index.css" />
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
   <title>GItest</title>
+    <script type="text/javascript" src="js/ng-cordova.min.js"></script>
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/angular.min.js"></script>
   <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript">
     init.initialize();
   </script>
@@ -39,7 +40,6 @@
       </div>
     </div>
     <div id="search" ng-show="!search">
-
       <div class="container">
         <div class="row">
           <form>
